fix: nome das relaçoes

--- a/aspectos_sociais.ipynb
+++ b/aspectos_sociais.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Relação entre `aspectos sociais` e `expectativa de vida `\n",
     "\n",
-    "### IDH, Criminalidade e Desemprego"
+    "### IDH e Desemprego"
    ]
   },
   {
