adicionando modelo de regressão linear

--- a/economicoRascunho.ipynb
+++ b/economicoRascunho.ipynb
@@ -742,6 +742,56 @@
    "source": [
     "Percebemos que quanto maior o PIB maior é a qualidade de vida"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pib_merge' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+      "\u001b[1;32md:\\Área de Trabalho\\ICD\\Trabalho Final\\Trabalho_Final_ICD\\aspectosEconomicos.ipynb Cell 35\u001b[0m line \u001b[0;36m1\n",
+      "\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/%C3%81rea%20de%20Trabalho/ICD/Trabalho%20Final/Trabalho_Final_ICD/aspectosEconomicos.ipynb#X46sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m t_stat_life_exp, p_value_life_exp \u001b[39m=\u001b[39m stats\u001b[39m.\u001b[39mttest_1samp(pib_merge[\u001b[39m'\u001b[39m\u001b[39mLifeExp_2019\u001b[39m\u001b[39m'\u001b[39m], pib_merge[\u001b[39m'\u001b[39m\u001b[39mLifeExp_2019\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mmean())\n",
+      "\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/%C3%81rea%20de%20Trabalho/ICD/Trabalho%20Final/Trabalho_Final_ICD/aspectosEconomicos.ipynb#X46sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# Realizando um teste t de Student para PIB em 2019\u001b[39;00m\n",
+      "\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/%C3%81rea%20de%20Trabalho/ICD/Trabalho%20Final/Trabalho_Final_ICD/aspectosEconomicos.ipynb#X46sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m t_stat_pib, p_value_pib \u001b[39m=\u001b[39m stats\u001b[39m.\u001b[39mttest_1samp(pib_merge[\u001b[39m'\u001b[39m\u001b[39mPIB_2019\u001b[39m\u001b[39m'\u001b[39m], pib_merge[\u001b[39m'\u001b[39m\u001b[39mPIB_2019\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mmean())\n",
+      "\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pib_merge' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "t_stat_life_exp, p_value_life_exp = stats.ttest_1samp(pib_merge['LifeExp_2019'], pib_merge['LifeExp_2019'].mean())\n",
+    "\n",
+    "# Realizando um teste t de Student para PIB em 2019\n",
+    "t_stat_pib, p_value_pib = stats.ttest_1samp(pib_merge['PIB_2019'], pib_merge['PIB_2019'].mean())\n",
+    "\n",
+    "# Imprimindo o resultado do teste de hipótese para expectativa de vida\n",
+    "print(\"Resultado do Teste de Hipótese para Expectativa de Vida (2019):\")\n",
+    "print(\"Estatística t para Expectativa de Vida:\", t_stat_life_exp)\n",
+    "print(\"Valor p para Expectativa de Vida:\", p_value_life_exp)\n",
+    "\n",
+    "# Imprimindo o resultado do teste de hipótese para PIB\n",
+    "print(\"\\nResultado do Teste de Hipótese para PIB (2019):\")\n",
+    "print(\"Estatística t para PIB:\", t_stat_pib)\n",
+    "print(\"Valor p para PIB:\", p_value_pib) \n",
+    "\n",
+    "# Calculando o intervalo de confiança para expectativa de vida em 2019\n",
+    "confidence_interval_life_exp = stats.t.interval(0.95, len(pib_merge['LifeExp_2019']) - 1, loc=pib_merge['LifeExp_2019'].mean(), scale=stats.sem(pib_merge['LifeExp_2019']))\n",
+    "\n",
+    "# Calculando o intervalo de confiança para PIB em 2019\n",
+    "confidence_interval_pib = stats.t.interval(0.95, len(pib_merge['PIB_2019']) - 1, loc=pib_merge['PIB_2019'].mean(), scale=stats.sem(pib_merge['PIB_2019']))\n",
+    "\n",
+    "# Imprimindo o intervalo de confiança para expectativa de vida\n",
+    "print(\"\\nIntervalo de Confiança para Expectativa de Vida (95%):\", confidence_interval_life_exp)\n",
+    "\n",
+    "# Imprimindo o intervalo de confiança para PIB\n",
+    "print(\"Intervalo de Confiança para PIB (95%):\", confidence_interval_pib)"
+   ]
   }
  ],
  "metadata": {
