adicionando intervalo de confiança

--- a/aspectosEconomicos.ipynb
+++ b/aspectosEconomicos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.utils import resample"
    ]
   },
   {
@@ -1958,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -1967,8 +1968,9 @@
      "text": [
       "Coefficient: [[-2.26016631]]\n",
       "Intercept: [74.72059239]\n",
-      "Mean squared error: 63.98\n",
-      "R2: 0.15\n"
+      "Mean squared error: 65.52\n",
+      "R2: 0.13\n",
+      "Intervalo de confiança: (0.06344135541407425, 0.21190762721737497)\n"
      ]
     }
    ],
@@ -1990,10 +1992,29 @@
     "\n",
     "y_pred = modelo.predict(X_test)\n",
     "\n",
+    "n_iterations = 1000\n",
+    "# Armazenar os R^2 de cada bootstrap\n",
+    "bootstrap_r2 = []\n",
+    "\n",
+    "for i in range(n_iterations):\n",
+    "    # Amostragem com substituição\n",
+    "    X_bootstrap, y_bootstrap = resample(X_train, y_train)\n",
+    "    # Ajustar modelo aos dados bootstrap\n",
+    "    model = LinearRegression().fit(X_bootstrap.reshape(-1, 1), y_bootstrap)\n",
+    "    # Prever e calcular R^2\n",
+    "    y_pred = model.predict(X_test.reshape(-1, 1))\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "    bootstrap_r2.append(r2)\n",
+    "\n",
+    "# Calculando o intervalo de confiança de 95%\n",
+    "lower = np.percentile(bootstrap_r2, 2.5)\n",
+    "upper = np.percentile(bootstrap_r2, 97.5)\n",
+    "\n",
     "print(f'Coefficient: {modelo.coef_}')\n",
     "print(f'Intercept: {modelo.intercept_}')\n",
     "print(f'Mean squared error: {mean_squared_error(y_test, y_pred):.2f}' )\n",
-    "print(f'R2: {r2_score(y_test, y_pred):.2f}')"
+    "print(f'R2: {r2_score(y_test, y_pred):.2f}')\n",
+    "print(f'Intervalo de confiança: {(lower, upper)}')"
    ]
   },
   {
@@ -2094,7 +2115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -2103,8 +2124,9 @@
      "text": [
       "Coefficient: [[4.01756406]]\n",
       "Intercept: [70.69755834]\n",
-      "Mean squared error: 95.92\n",
-      "R2: -0.36\n"
+      "Mean squared error: 158.84\n",
+      "R2: -1.25\n",
+      "Intervalo de confiança: (-0.9956739063750689, -0.1476147428049252)\n"
      ]
     }
    ],
@@ -2126,10 +2148,79 @@
     "\n",
     "y_pred = modelo.predict(X_test)\n",
     "\n",
+    "n_iterations = 1000\n",
+    "# Armazenar os R^2 de cada bootstrap\n",
+    "bootstrap_r2 = []\n",
+    "\n",
+    "for i in range(n_iterations):\n",
+    "    # Amostragem com substituição\n",
+    "    X_bootstrap, y_bootstrap = resample(X_train, y_train)\n",
+    "    # Ajustar modelo aos dados bootstrap\n",
+    "    model = LinearRegression().fit(X_bootstrap.reshape(-1, 1), y_bootstrap)\n",
+    "    # Prever e calcular R^2\n",
+    "    y_pred = model.predict(X_test.reshape(-1, 1))\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "    bootstrap_r2.append(r2)\n",
+    "\n",
+    "# Calculando o intervalo de confiança de 95%\n",
+    "lower = np.percentile(bootstrap_r2, 2.5)\n",
+    "upper = np.percentile(bootstrap_r2, 97.5)\n",
+    "\n",
     "print(f'Coefficient: {modelo.coef_}')\n",
     "print(f'Intercept: {modelo.intercept_}')\n",
     "print(f'Mean squared error: {mean_squared_error(y_test, y_pred):.2f}' )\n",
-    "print(f'R2: {r2_score(y_test, y_pred):.2f}')"
+    "print(f'R2: {r2_score(y_test, y_pred):.2f}')\n",
+    "print(f'Intervalo de confiança: {(lower, upper)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pib_merge' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+      "\u001b[1;32md:\\Área de Trabalho\\ICD\\Trabalho Final\\Trabalho_Final_ICD\\aspectosEconomicos.ipynb Cell 35\u001b[0m line \u001b[0;36m1\n",
+      "\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/%C3%81rea%20de%20Trabalho/ICD/Trabalho%20Final/Trabalho_Final_ICD/aspectosEconomicos.ipynb#X46sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m t_stat_life_exp, p_value_life_exp \u001b[39m=\u001b[39m stats\u001b[39m.\u001b[39mttest_1samp(pib_merge[\u001b[39m'\u001b[39m\u001b[39mLifeExp_2019\u001b[39m\u001b[39m'\u001b[39m], pib_merge[\u001b[39m'\u001b[39m\u001b[39mLifeExp_2019\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mmean())\n",
+      "\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/%C3%81rea%20de%20Trabalho/ICD/Trabalho%20Final/Trabalho_Final_ICD/aspectosEconomicos.ipynb#X46sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# Realizando um teste t de Student para PIB em 2019\u001b[39;00m\n",
+      "\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/%C3%81rea%20de%20Trabalho/ICD/Trabalho%20Final/Trabalho_Final_ICD/aspectosEconomicos.ipynb#X46sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m t_stat_pib, p_value_pib \u001b[39m=\u001b[39m stats\u001b[39m.\u001b[39mttest_1samp(pib_merge[\u001b[39m'\u001b[39m\u001b[39mPIB_2019\u001b[39m\u001b[39m'\u001b[39m], pib_merge[\u001b[39m'\u001b[39m\u001b[39mPIB_2019\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mmean())\n",
+      "\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pib_merge' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "t_stat_life_exp, p_value_life_exp = stats.ttest_1samp(pib_merge['LifeExp_2019'], pib_merge['LifeExp_2019'].mean())\n",
+    "\n",
+    "# Realizando um teste t de Student para PIB em 2019\n",
+    "t_stat_pib, p_value_pib = stats.ttest_1samp(pib_merge['PIB_2019'], pib_merge['PIB_2019'].mean())\n",
+    "\n",
+    "# Imprimindo o resultado do teste de hipótese para expectativa de vida\n",
+    "print(\"Resultado do Teste de Hipótese para Expectativa de Vida (2019):\")\n",
+    "print(\"Estatística t para Expectativa de Vida:\", t_stat_life_exp)\n",
+    "print(\"Valor p para Expectativa de Vida:\", p_value_life_exp)\n",
+    "\n",
+    "# Imprimindo o resultado do teste de hipótese para PIB\n",
+    "print(\"\\nResultado do Teste de Hipótese para PIB (2019):\")\n",
+    "print(\"Estatística t para PIB:\", t_stat_pib)\n",
+    "print(\"Valor p para PIB:\", p_value_pib) \n",
+    "\n",
+    "# Calculando o intervalo de confiança para expectativa de vida em 2019\n",
+    "confidence_interval_life_exp = stats.t.interval(0.95, len(pib_merge['LifeExp_2019']) - 1, loc=pib_merge['LifeExp_2019'].mean(), scale=stats.sem(pib_merge['LifeExp_2019']))\n",
+    "\n",
+    "# Calculando o intervalo de confiança para PIB em 2019\n",
+    "confidence_interval_pib = stats.t.interval(0.95, len(pib_merge['PIB_2019']) - 1, loc=pib_merge['PIB_2019'].mean(), scale=stats.sem(pib_merge['PIB_2019']))\n",
+    "\n",
+    "# Imprimindo o intervalo de confiança para expectativa de vida\n",
+    "print(\"\\nIntervalo de Confiança para Expectativa de Vida (95%):\", confidence_interval_life_exp)\n",
+    "\n",
+    "# Imprimindo o intervalo de confiança para PIB\n",
+    "print(\"Intervalo de Confiança para PIB (95%):\", confidence_interval_pib)"
    ]
   },
   {
