--- a/saneamento_básico_1.ipynb
+++ b/saneamento_básico_1.ipynb
@@ -6,7 +6,7 @@
         "id": "39VxvxUkDmI6"
       },
       "source": [
-        "## Saneamento Básico e Poluição (Fine Particular Matter), Expectativa de vida e IDH"
+        "## Saneamento Básico, Expectativa de vida e IDH"
       ]
     },
     {
