feat(notebook): started to write main notebook

--- a/analise_saude.ipynb
+++ b/analise_saude.ipynb
@@ -37,119 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>Period</th>\n",
-       "      <th>Indicator</th>\n",
-       "      <th>ParentLocation</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Dim1</th>\n",
-       "      <th>2000_expectativa</th>\n",
-       "      <th>2010_expectativa</th>\n",
-       "      <th>2015_expectativa</th>\n",
-       "      <th>2019_expectativa</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Life expectancy at age 60 (years)</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Both sexes</td>\n",
-       "      <td>19.81</td>\n",
-       "      <td>21.37</td>\n",
-       "      <td>21.81</td>\n",
-       "      <td>22.04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Life expectancy at age 60 (years)</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>20.25</td>\n",
-       "      <td>21.85</td>\n",
-       "      <td>22.33</td>\n",
-       "      <td>22.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Life expectancy at age 60 (years)</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>19.36</td>\n",
-       "      <td>20.89</td>\n",
-       "      <td>21.33</td>\n",
-       "      <td>21.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Life expectancy at age 60 (years)</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>Angola</td>\n",
-       "      <td>Both sexes</td>\n",
-       "      <td>14.42</td>\n",
-       "      <td>15.97</td>\n",
-       "      <td>16.71</td>\n",
-       "      <td>16.98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Life expectancy at age 60 (years)</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>Angola</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>16.01</td>\n",
-       "      <td>17.54</td>\n",
-       "      <td>18.42</td>\n",
-       "      <td>18.55</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Period                          Indicator ParentLocation  Country        Dim1  \\\n",
-       "0       Life expectancy at age 60 (years)         Africa  Algeria  Both sexes   \n",
-       "1       Life expectancy at age 60 (years)         Africa  Algeria      Female   \n",
-       "2       Life expectancy at age 60 (years)         Africa  Algeria        Male   \n",
-       "3       Life expectancy at age 60 (years)         Africa   Angola  Both sexes   \n",
-       "4       Life expectancy at age 60 (years)         Africa   Angola      Female   \n",
-       "\n",
-       "Period  2000_expectativa  2010_expectativa  2015_expectativa  2019_expectativa  \n",
-       "0                  19.81             21.37             21.81             22.04  \n",
-       "1                  20.25             21.85             22.33             22.62  \n",
-       "2                  19.36             20.89             21.33             21.53  \n",
-       "3                  14.42             15.97             16.71             16.98  \n",
-       "4                  16.01             17.54             18.42             18.55  "
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\OneDrive - Universidade Federal de Minas Gerais\\FACULDADE\\5° PERÍODO\\ICD\\Trabalho_Final_ICD\\analise_saude.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/OneDrive%20-%20Universidade%20Federal%20de%20Minas%20Gerais/FACULDADE/5%C2%B0%20PER%C3%8DODO/ICD/Trabalho_Final_ICD/analise_saude.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df_expectativa_vida \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39m./dataset/expectativa_vida.csv\u001b[39m\u001b[39m'\u001b[39m, sep\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/OneDrive%20-%20Universidade%20Federal%20de%20Minas%20Gerais/FACULDADE/5%C2%B0%20PER%C3%8DODO/ICD/Trabalho_Final_ICD/analise_saude.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m df_expectativa_vida  \u001b[39m=\u001b[39m df_expectativa_vida[[\u001b[39m'\u001b[39m\u001b[39mIndicator\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mParentLocation\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mCountry\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mPeriod\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mDim1\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mValue\u001b[39m\u001b[39m'\u001b[39m]]\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/OneDrive%20-%20Universidade%20Federal%20de%20Minas%20Gerais/FACULDADE/5%C2%B0%20PER%C3%8DODO/ICD/Trabalho_Final_ICD/analise_saude.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Pivotando o dataframe para transformar a coluna 'Period' em colunas separadas para os anos desejados\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
