feat: regressão idh e desempergo

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,6 +13,16 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## R2 aspectos sociais\n",
+    "R² Score for HDI: 0.8326030081192164\n",
+    "\n",
+    "R² Score for Unemployment: -0.07389699818714957\n"
+   ]
   }
  ],
  "metadata": {
