--- a/main.ipynb
+++ b/main.ipynb
@@ -1423,20 +1423,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coefficient: 0.13433951601135943\n",
-      "Intercept: [0.6827972]\n",
-      "Mean squared error: 0.004305029155463548\n",
-      "Mean absolute error: 0.05477792984133261\n",
-      "R2: 0.85\n",
-      "Intervalo de Confiança de 95% para o MAE: 0.004248853888298078, 0.004907741556900199\n",
-      "Intervalo de confiança de 95% para o MAE: [0.05, 0.06]\n"
+      "Coefficient: 0.14471904549020828\n",
+      "Intercept: [0.68384933]\n",
+      "Mean squared error: 0.0041966717299799115\n",
+      "Mean absolute error: 0.051813947620385235\n",
+      "R2: 0.83\n",
+      "Intervalo de Confiança de 95% para o MAE: 0.00404400142751117, 0.004526377979806055\n",
+      "Intervalo de confiança de 95% para o MAE: [0.05, 0.05]\n",
+      "Equação da reta: y = 0.14x + 0.68\n"
      ]
     }
    ],
@@ -1498,6 +1499,9 @@
     "print(f'R2: {r2_score(y_test, y_pred):.2f}')\n",
     "print(f\"Intervalo de Confiança de 95% para o MAE: {lower:}, {upper:}\")\n",
     "print(f\"Intervalo de confiança de 95% para o MAE: [{lower_bound:.2f}, {upper_bound:.2f}]\")\n",
+    "\n",
+    "#imprimir equação da reta\n",
+    "print(f'Equação da reta: y = {modelo.coef_[0][1]:.2f}x + {modelo.intercept_[0]:.2f}')\n",
     "\n",
     "\n"
    ]
